--- a/usr/tests/makefile
+++ b/usr/tests/makefile
@@ -7,7 +7,7 @@ AFPX := true
 EXES := $(UNITS)
 
 CLIBS := x_mng cutil X11
-CLIBS_t_ndbm := cndbm
+CLIBS_t_ndbm := cndbm gdbm
 
 include $(TEMPLATES)/ada.mk
 
