--- a/usr/makefile
+++ b/usr/makefile
@@ -1,4 +1,4 @@
-SUBDIRS := account approx c_magic chess code day_of_week dictio fifo fl \
+SUBDIRS := account approx c_magic chess code day_of_week dictio fifos fl \
  great_circle heart hungar mcd misc mmind navig nimmari pexec \
  simusi status sokoban tasks tests
 
