--- a/usr/misc/makefile
+++ b/usr/misc/makefile
@@ -2,7 +2,7 @@ include $(HOME)/Makefiles/common.mk
 
 ADAVIEW := $(REPOSIT)
 EXES := adand beep ddir e2f fact g hanoi impot_02 look_95 mlbx_overflow \
-        one_of_arg pascal pipe prime random rndsok second stat statfile \
+        one_of_arg pascal prime random relay rndsok second stat statfile \
 	tcping wait
 
 CLIBS := cutil
