First Fifo shot.

--- a/usr/mcd/makefile
+++ b/usr/mcd/makefile
@@ -1,6 +1,6 @@
 include $(HOME)/Makefiles/common.mk
 
-ADAVIEW := $(REPOSIT)
+ADAVIEW := $(REPOSIT) $(HOME)/ada/usr/fifos $(HOME)/ada/usr/dictio
 EXES := mcd
 
 CLIBS_mcd := cutil
