Make a stand alone package + test program.

--- a/usr/great_circle/makefile
+++ b/usr/great_circle/makefile
@@ -1,9 +1,9 @@
 include $(HOME)/Makefiles/common.mk
 
 ADAVIEW := $(REPOSIT)
-EXES := great_circle
+EXES := t_gc
 
-CLIBS_great_circle := cutil
+CLIBS_t_gc := cutil
 
 include $(TEMPLATES)/ada.mk
 
