--- a/usr/great_circle/makefile
+++ b/usr/great_circle/makefile
@@ -1,9 +1,10 @@
 include $(HOME)/Makefiles/common.mk
 
 ADAVIEW := $(REPOSIT)
+AFPX := true
 EXES := t_gc
 
-CLIBS_t_gc := cutil
+CLIBS_t_gc := x_mng cutil X11
 
 include $(TEMPLATES)/ada.mk
 
