File name renamer, based on Select_File.

--- a/usr/misc/makefile
+++ b/usr/misc/makefile
@@ -1,11 +1,14 @@
 include $(HOME)/Makefiles/common.mk
 
 ADAVIEW := $(REPOSIT)
+AFPX := true
+
 EXES := adand beep ddir e2f fact g hanoi impot_04 look_95 mlbx_overflow \
-        one_of_arg pascal prime random relay rndsok second stat statfile \
-	tcping wait
+        one_of_arg pascal prime random relay rndsok renamer \
+	second stat statfile tcping wait
 
 CLIBS := cutil
+CLIBS_renamer := x_mng X11
 
 include $(TEMPLATES)/ada.mk
 
