Add regex.c (malloc/free of regex buffer).

--- a/c/makefile
+++ b/c/makefile
@@ -4,7 +4,7 @@ LIBS := libcndbm libcutil libx_mng
 EXES := test_x
 
 OBJS_libcndbm := cndbm.o
-OBJS_libcutil := timeval.o sys_calls.o wait_evt.o socket.o socket_afux.o
+OBJS_libcutil := timeval.o sys_calls.o wait_evt.o socket.o socket_afux.o regex.o
 OBJS_libx_mng := x_color.o x_font.o x_line.o\
 	x_export.o x_file.o x_key.o x_screen.o
 
