--- a/usr/makefile
+++ b/usr/makefile
@@ -1,6 +1,6 @@
 SUBDIRS := account approx c_magic chess code day_of_week dictio fifos fl \
  great_circle heart hungar mcd misc mmind navig nimmari pexec pipe \
- simusi status sokoban tasks tests
+ simusi sokoban tasks tests
 
 include $(HOME)/Makefiles/dir.mk
 
