Import message type from Mcd.

--- a/usr/pipe/makefile
+++ b/usr/pipe/makefile
@@ -1,6 +1,6 @@
 include $(HOME)/Makefiles/common.mk
 
-ADAVIEW := $(REPOSIT) $(HOME)/ada/usr/dictio $(HOME)/ada/usr/fifos
+ADAVIEW := $(REPOSIT) $(HOME)/ada/usr/dictio $(HOME)/ada/usr/fifos $(HOME)/ada/usr/mcd
 EXES := pipe
 
 CLIBS_pipe := cutil
