First release end of dev.

--- a/usr/enigma/enigma.cnf
+++ b/usr/enigma/enigma.cnf
@@ -1,4 +1,4 @@
-# Scrambler (for jammers & back) definition for Enigma
+# Scrambler definitions, for jammers and back of Enigma
 
 1
 ABCDEFGHIJKLMNOPQRSTUVWXYZ
@@ -10,9 +10,19 @@ BADCFEHGJILKNMPORQTSVUXWZY
 
 3
 ABCDEFGHIJKLMNOPQRSTUVWXYZ
-MLKJIHGFEDCABZYXWVUTSRQPON
+MLKJIHGFEDCBAZYXWVUTSRQPON
 
 4
 ABCDEFGHIJKLMNOPQRSTUVWXYZ
 ZAYBXCWDVEUFTGSHRIQJPKOLNM
+
+# For the back
+8
+ABCDEFGHIJKLMNOPQRSTUVWXYZ
+ZYXWVUTSRQPONMLKJIHGFEDCBA
+
+# Identity
+9
+ABCDEFGHIJKLMNOPQRSTUVWXYZ
+ABCDEFGHIJKLMNOPQRSTUVWXYZ
 
