Replece scrambler 8 from identity to a random symetrical scrambler.

--- a/usr/enigma/enigma.cnf
+++ b/usr/enigma/enigma.cnf
@@ -1,5 +1,5 @@
 # Scrambler definitions, for jammers and back of Enigma
-
+# For scamblers only
 1
 ABCDEFGHIJKLMNOPQRSTUVWXYZ
 EMSQKCXAZNJWFVTOGBIURPDHYL
@@ -24,7 +24,7 @@ QFAJPRVHGNDBIMZWXLCKSUYTEO
 ABCDEFGHIJKLMNOPQRSTUVWXYZ
 OEJRYNKGLZFQVBAHPDMXCTIWUS
 
-# For the back
+# For scramblers or for the back
 7
 ABCDEFGHIJKLMNOPQRSTUVWXYZ
 YXKSIMLVEQCGFONWJTDRZHPBAU
@@ -33,8 +33,7 @@ YXKSIMLVEQCGFONWJTDRZHPBAU
 ABCDEFGHIJKLMNOPQRSTUVWXYZ
 VXRZSWPLMNQHIJUGKCEYOAFBTD
 
-# Identity
 9
 ABCDEFGHIJKLMNOPQRSTUVWXYZ
-ABCDEFGHIJKLMNOPQRSTUVWXYZ
+RQZJFEOSPDNXWKGIBAHVYTMLUC
 
