--- a/usr/enigma/makefile
+++ b/usr/enigma/makefile
@@ -5,6 +5,7 @@ EXES := enigma scrambler_generator def_enigma
 
 CLIBS_enigma := cutil
 CLIBS_scrambler_generator := cutil
+CLIBS_def_enigma := cutil
 
 include $(TEMPLATES)/ada.mk
 
