--- a/usr/enigma/makefile
+++ b/usr/enigma/makefile
@@ -1,11 +1,12 @@
 include $(HOME)/Makefiles/common.mk
 
 ADAVIEW := $(REPOSIT)
-EXES := enigma scrambler_generator def_enigma
+EXES := enigma scrambler_generator def_enigma letterator
 
 CLIBS_enigma := cutil
 CLIBS_scrambler_generator := cutil
 CLIBS_def_enigma := cutil
+CLIBS_letterator := cutil
 
 include $(TEMPLATES)/ada.mk
 
