--- a/usr/makefile
+++ b/usr/makefile
@@ -1,7 +1,7 @@
 SUBDIRS := dictio fifos mcd pipe \
  account approx c_magic chess code day_of_week enigma fl \
  great_circle heart hungar misc mmind navig nimmari pexec \
- simusi sokoban tasks tests
+ simusi sokoban substit tasks tests
 
 include $(HOME)/Makefiles/dir.mk
 
