Asubst V1.2. First version passing basic tests.

--- a/usr/asubst/makefile
+++ b/usr/asubst/makefile
@@ -1,9 +1,12 @@
 include $(HOME)/Makefiles/common.mk
 
 ADAVIEW := $(REPOSIT)
-EXES := asubst
+EXES := asubst asubst.stat
 
-CLIBS_asubst := cutil
+CLIBS := cutil
+
+TPATH := $(CPATH:%=%/$(LIB))
+LARGS_asubst.stat := $(TPATH)/libcutil.a
 
 include $(TEMPLATES)/ada.mk
 
