--- a/usr/enigma/makefile
+++ b/usr/enigma/makefile
@@ -1,8 +1,9 @@
 include $(HOME)/Makefiles/common.mk
 
 ADAVIEW := $(REPOSIT)
-EXES := enigma scrambler_generator def_enigma letterator
+EXES := anal_freq enigma scrambler_generator def_enigma letterator
 
+CLIBS_anal_freq := cutil
 CLIBS_enigma := cutil
 CLIBS_scrambler_generator := cutil
 CLIBS_def_enigma := cutil
