--- a/usr/misc/makefile
+++ b/usr/misc/makefile
@@ -5,7 +5,7 @@ AFPX := true
 
 EXES := adand beep ddir e2f fact g hanoi impot_04 look_95 mlbx_overflow \
         one_of_arg pascal prime random relay rndsok renamer \
-        second stat statfile status tcping trail_spaces wait words_check
+        second stat statfile status strcase tcping trail_spaces wait words_check
 
 CLIBS := cutil
 CLIBS_renamer := x_mng X11
