--- a/usr/makefile
+++ b/usr/makefile
@@ -1,5 +1,5 @@
 SUBDIRS := dictio fifos mcd pipe \
- account approx asubst c_magic chess code day_of_week enigma fl \
+ account approx astub asubst c_magic chess code day_of_week enigma fl \
  great_circle heart hungar misc mmind navig nimmari pexec \
  simusi sokoban tasks tests
 
