--- a/usr/misc/makefile
+++ b/usr/misc/makefile
@@ -3,7 +3,8 @@ include $(HOME)/Makefiles/common.mk
 ADAVIEW := $(REPOSIT)
 AFPX := true
 
-EXES := adand beep ddir e2f fact g hanoi impot_04 look_95 mlbx_overflow \
+EXES := adand arbipas beep ddir e2f fact g hanoi impot_04 look_95 \
+        mlbx_overflow \
         one_of_arg pascal prime random relay rndsok renamer \
         second stat statfile status strcase tcping trail_spaces wait words_check
 
