--- a/usr/lem/makefile
+++ b/usr/lem/makefile
@@ -1,9 +1,9 @@
 include $(HOME)/Makefiles/common.mk
 
 ADAVIEW := $(REPOSIT)
-EXES := game
+EXES := land_lem
 
-CLIBS_game := x_mng cutil X11
+CLIBS_land_lem := x_mng cutil X11
 
 include $(TEMPLATES)/ada.mk
 
