--- a/usr/makefile
+++ b/usr/makefile
@@ -1,6 +1,6 @@
 SUBDIRS := dictio fifos mcd pipe \
  account approx astub asubst c_magic chess code day_of_week enigma fl \
- great_circle heart hungar misc mmind navig nimmari pexec \
+ great_circle heart hungar lem misc mmind navig nimmari pexec \
  simusi sokoban tasks tests
 
 include $(HOME)/Makefiles/dir.mk
