--- a/reposit/makefile
+++ b/reposit/makefile
@@ -5,7 +5,7 @@ include $(TEMPLATES)/units.mk
 SUBUNITS := afpx-af_dscr afpx-af_list afpx-af_ptg channels-file \
   pattern-storage x_mng-dispatch \
   xml_parser-entity_mng xml_parser-file_mng xml_parser-parse_mng \
-  xml_parser-parse_mng-util xml_parser-tree_mng
+  xml_parser-parse_mng-dtd xml_parser-parse_mng-util xml_parser-tree_mng
 
 LIBS := $(filter-out $(SUBUNITS), $(UNITS))
 
