Use definitions in common.mk.

--- a/usr/account/makefile
+++ b/usr/account/makefile
@@ -7,8 +7,7 @@ EXES := account import export account.stat
 CLIBS := cutil
 CLIBS_account := x_mng X11
 
-TPATH := $(CPATH:%=%/$(LIB))
-LARGS_account.stat := $(TPATH)/libx_mng.a $(TPATH)/libcutil.a -lX11
+LARGS_account.stat := $(CPATHD)/libx_mng.a $(CPATHD)/libcutil.a -lX11
 
 include $(TEMPLATES)/ada.mk
 
