--- a/usr/misc/makefile
+++ b/usr/misc/makefile
@@ -6,10 +6,14 @@ AFPX := true
 EXES := adand arbipas beep ddir e2f fact g hanoi impot_04 look_95 \
         mlbx_overflow \
         one_of_arg pascal prime random relay rndsok renamer \
-        second stat statfile status strcase tcping trail_spaces wait words_check
+        second stat statfile status strcase tcping trail_spaces wait \
+        words_check \
+        tcping.stat
 
 CLIBS := cutil
 CLIBS_renamer := x_mng X11
+
+LARGS_tcping.stat := $(CPATHD)/libcutil.a
 
 include $(TEMPLATES)/ada.mk
 
