Reorganise ADAVIEW. Move Mcd message type definition to a standalone package and use it in Pipe.

--- a/usr/mcd/makefile
+++ b/usr/mcd/makefile
@@ -1,6 +1,6 @@
 include $(HOME)/Makefiles/common.mk
 
-ADAVIEW := $(REPOSIT) $(HOME)/ada/usr/fifos $(HOME)/ada/usr/dictio
+ADAVIEW := $(HOME)/ada/usr/fifos $(HOME)/ada/usr/dictio $(REPOSIT)
 
 EXES := mcd
 
