--- a/usr/misc/makefile
+++ b/usr/misc/makefile
@@ -4,11 +4,10 @@ ADAVIEW := $(REPOSIT)
 AFPX := true
 
 EXES := adand alook arbipas beep ddir e2f fact g hanoi impot_04 \
-        mlbx_overflow \
-        one_of_arg pascal prime random relay rndsok renamer \
-        second stat statfile status strcase tcping trail_spaces wait \
-        words_check \
-        tcping.stat
+ mlbx_overflow one_of_arg pascal prime random relay rndsok renamer \
+ second stat statfile status strcase tcping trail_spaces udp_spy \
+ wait words_check \
+ tcping.stat
 
 CLIBS := cutil
 CLIBS_renamer := x_mng X11
