--- a/usr/misc/makefile
+++ b/usr/misc/makefile
@@ -3,7 +3,7 @@ include $(HOME)/Makefiles/common.mk
 ADAVIEW := $(REPOSIT)
 AFPX := true
 
-EXES := adand alook arbipas beep ddir e2f fact g hanoi impot_04 \
+EXES := adand add_nums alook arbipas beep ddir e2f fact g hanoi impot_04 \
  mlbx_overflow one_of_arg pascal prime random relay rndsok renamer \
  second stat statfile status strcase tcping trail_spaces udp_spy \
  wait words_check \
