Use $USER for colateral ADAVIEWs.

--- a/usr/fifos/makefile
+++ b/usr/fifos/makefile
@@ -1,6 +1,6 @@
 include $(HOME)/Makefiles/common.mk
 
-ADAVIEW := $(HOME)/ada/usr/dictio $(REPOSIT)
+ADAVIEW := $(USR)/dictio $(REPOSIT)
 EXES := t_fifos
 
 CLIBS_t_fifos := cutil
