--- a/usr/pipe/makefile
+++ b/usr/pipe/makefile
@@ -1,6 +1,6 @@
 include $(HOME)/Makefiles/common.mk
 
-ADAVIEW := $(HOME)/ada/usr/mcd $(HOME)/ada/usr/fifos $(HOME)/ada/usr/dictio $(REPOSIT)
+ADAVIEW := $(USR)/mcd $(USR)/fifos $(USR)/dictio $(REPOSIT)
 EXES := pipe
 
 CLIBS_pipe := cutil
