Replace CLIBS_xxx by CLIBS when possible.

--- a/usr/dictio/makefile
+++ b/usr/dictio/makefile
@@ -3,8 +3,7 @@ include $(HOME)/Makefiles/common.mk
 ADAVIEW := $(REPOSIT)
 EXES := dictio t_dictio
 
-CLIBS_dictio := cutil
-CLIBS_t_dictio := cutil
+CLIBS := cutil
 
 include $(TEMPLATES)/ada.mk
 
