--- a/usr/enigma/makefile
+++ b/usr/enigma/makefile
@@ -3,11 +3,7 @@ include $(HOME)/Makefiles/common.mk
 ADAVIEW := $(REPOSIT)
 EXES := anal_freq enigma scrambler_generator def_enigma letterator
 
-CLIBS_anal_freq := cutil
-CLIBS_enigma := cutil
-CLIBS_scrambler_generator := cutil
-CLIBS_def_enigma := cutil
-CLIBS_letterator := cutil
+CLIBS := cutil
 
 include $(TEMPLATES)/ada.mk
 
