--- a/reposit/makefile
+++ b/reposit/makefile
@@ -11,9 +11,7 @@ LIBS := $(filter-out $(SUBUNITS), $(UNITS))
 
 EXES := afpx_bld clear_screen
 
-CLIBS_afpx_bld := x_mng cutil X11
-
-CLIBS_clear_screen := x_mng cutil X11
+CLIBS := x_mng cutil X11
 
 GNATHTMLOPT := -D
 
