--- a/usr/approx/makefile
+++ b/usr/approx/makefile
@@ -4,12 +4,7 @@ ADAVIEW := $(REPOSIT)
 AFPX := true
 EXES := approxp import export
 
-CLIBS_approxp := x_mng cutil X11
-
-CLIBS_import := x_mng cutil X11
-
-CLIBS_export := x_mng cutil X11
+CLIBS := x_mng cutil X11
 
 include $(TEMPLATES)/ada.mk
-
 
