--- a/usr/fifos/makefile
+++ b/usr/fifos/makefile
@@ -3,7 +3,7 @@ include $(HOME)/Makefiles/common.mk
 ADAVIEW := $(USR)/dictio $(REPOSIT)
 EXES := t_fifos
 
-CLIBS_t_fifos := cutil
+CLIBS := cutil
 
 include $(TEMPLATES)/ada.mk
 
