--- a/usr/navig/makefile
+++ b/usr/navig/makefile
@@ -3,7 +3,7 @@ include $(HOME)/Makefiles/common.mk
 ADAVIEW := $(REPOSIT)
 EXES := navig
 
-CLIBS_navig := x_mng cutil X11
+CLIBS := x_mng cutil X11
 
 include $(TEMPLATES)/ada.mk
 
