--- a/usr/nimmari/makefile
+++ b/usr/nimmari/makefile
@@ -4,7 +4,7 @@ ADAVIEW := $(REPOSIT)
 AFPX := true
 EXES := nimmari
 
-CLIBS_nimmari := x_mng cutil X11
+CLIBS := x_mng cutil X11
 
 include $(TEMPLATES)/ada.mk
 
