--- a/usr/simusi/makefile
+++ b/usr/simusi/makefile
@@ -3,7 +3,7 @@ include $(HOME)/Makefiles/common.mk
 ADAVIEW := $(REPOSIT)
 EXES := simusi
 
-CLIBS_simusi := cutil
+CLIBS := cutil
 
 include $(TEMPLATES)/ada.mk
 
