--- a/usr/sokoban/makefile
+++ b/usr/sokoban/makefile
@@ -3,7 +3,7 @@ include $(HOME)/Makefiles/common.mk
 ADAVIEW := $(REPOSIT)
 EXES := sokoban
 
-CLIBS_sokoban := x_mng cutil X11
+CLIBS := x_mng cutil X11
 
 include $(TEMPLATES)/ada.mk
 
