--- a/usr/als/makefile
+++ b/usr/als/makefile
@@ -2,9 +2,11 @@
 include $(HOME)/Makefiles/common.mk
 
 ADAVIEW := $(REPOSIT)
-EXES := als
+EXES := als als.stat
 
 CLIBS := cutil
+
+LARGS_als.stat := $(CPATHD)/libcutil.a
 
 include $(TEMPLATES)/ada.mk
 
