Move tests/t_xml to misc/xml_checker.

--- a/usr/misc/makefile
+++ b/usr/misc/makefile
@@ -6,13 +6,15 @@ AFPX := true
 EXES := adand add_nums alook arbipas beep ddir e2f fact g hanoi impot_04 \
  mlbx_overflow one_of_arg pascal prime random relay rndsok renamer \
  second stat statfile status strcase tcping trail_spaces udp_spy \
- wait words_check \
- tcping.stat
+ wait words_check xml_checker \
+ tcping.stat udp_spy.stat xml_checker.stat
 
 CLIBS := cutil
 CLIBS_renamer := x_mng X11
 
 LARGS_tcping.stat := $(CPATHD)/libcutil.a
+LARGS_udp_spy.stat := $(CPATHD)/libcutil.a
+LARGS_xml_checker.stat := $(CPATHD)/libcutil.a
 
 include $(TEMPLATES)/ada.mk
 
