Define CLIBS i.o. CLIBS_t_gc

--- a/usr/great_circle/makefile
+++ b/usr/great_circle/makefile
@@ -4,7 +4,7 @@ ADAVIEW := $(REPOSIT)
 AFPX := true
 EXES := t_gc
 
-CLIBS_t_gc := x_mng cutil X11
+CLIBS := x_mng cutil X11
 
 include $(TEMPLATES)/ada.mk
 
