Use PCRE (POSIX API) instead of POSIX regex. Regular_Expressions supports UTF-8 if Language is UTF-8. No more '<' or '>' but ''. No more basic regex.

--- a/usr/asubst/makefile
+++ b/usr/asubst/makefile
@@ -4,8 +4,11 @@ ADAVIEW := $(REPOSIT)
 EXES := asubst asubst.stat
 
 CLIBS := cutil
+CLIBS_asubst := pcreposix pcre
 
-LARGS_asubst.stat := $(CPATHD)/libcutil.a
+PCRE := `pcre-config --prefix`/lib
+LARGS_asubst.stat := $(CPATHD)/libcutil.a $(PCRE)/libpcreposix.a \
+  $(PCRE)/libpcre.a
 
 include $(TEMPLATES)/ada.mk
 
