--- a/usr/mcd/makefile
+++ b/usr/mcd/makefile
@@ -5,6 +5,7 @@ ADAVIEW := $(USR)/fifos $(USR)/dictio $(REPOSIT)
 EXES := mcd
 
 CLIBS := cutil
+CLIBS_mcd := pcreposix pcre
 
 include $(TEMPLATES)/ada.mk
 
