--- a/usr/als/makefile
+++ b/usr/als/makefile
@@ -5,8 +5,11 @@ ADAVIEW := $(REPOSIT)
 EXES := als als.stat
 
 CLIBS := cutil
+CLIBS_als := pcreposix pcre
 
-LARGS_als.stat := $(CPATHD)/libcutil.a
+PCRE := `pcre-config --prefix`/lib
+LARGS_als.stat := $(CPATHD)/libcutil.a $(PCRE)/libpcreposix.a \
+  $(PCRE)/libpcre.a
 
 include $(TEMPLATES)/ada.mk
 
