--- a/usr/asubst/makefile
+++ b/usr/asubst/makefile
@@ -4,10 +4,10 @@ ADAVIEW := $(REPOSIT)
 EXES := asubst asubst.stat
 
 CLIBS := cutil
-CLIBS_asubst := pcreposix pcre
+CLIBS_asubst := posix2pcre pcre
 
 PCRE := `pcre-config --prefix`/lib
-LARGS_asubst.stat := $(CPATHD)/libcutil.a $(PCRE)/libpcreposix.a \
+LARGS_asubst.stat := $(CPATHD)/libcutil.a $(CPATHD)/libposix2pcre.a \
   $(PCRE)/libpcre.a
 
 include $(TEMPLATES)/ada.mk
