--- a/usr/misc/makefile
+++ b/usr/misc/makefile
@@ -11,14 +11,14 @@ EXES := adand add_nums alook arbipas beep comp_vars ddir e2f fact g \
 
 CLIBS := cutil
 CLIBS_renamer := x_mng X11
-CLIBS_comp_vars := pcreposix pcre
-CLIBS_xml_checker := pcreposix pcre
+CLIBS_comp_vars := posix2pcre pcre
+CLIBS_xml_checker := posix2pcre pcre
 
 LARGS_tcping.stat := $(CPATHD)/libcutil.a
 LARGS_udp_spy.stat := $(CPATHD)/libcutil.a
 
 PCRE := `pcre-config --prefix`/lib
-LARGS_xml_checker.stat := $(CPATHD)/libcutil.a $(PCRE)/libpcreposix.a \
+LARGS_xml_checker.stat := $(CPATHD)/libcutil.a $(CPATHD)/libposix2pcre.a \
   $(PCRE)/libpcre.a
 
 include $(TEMPLATES)/ada.mk
