--- a/usr/pexec/makefile
+++ b/usr/pexec/makefile
@@ -1,9 +1,10 @@
 include $(HOME)/Makefiles/common.mk
 
 ADAVIEW := $(REPOSIT)
-EXES := pexec
+EXES := pexec pexec.stat
 
 CLIBS := cutil
+LARGS_pexec.stat := $(CPATHD)/libcutil.a
 
 include $(TEMPLATES)/ada.mk
 
