--- a/reposit/makefile
+++ b/reposit/makefile
@@ -12,7 +12,8 @@ LIBS := $(filter-out $(SUBUNITS), $(UNITS))
 
 EXES := afpx_bld clear_screen
 
-CLIBS := x_mng cutil X11 posix2pcre pcre
+CLIBS_afpx_bld := cutil x_mng posix2pcre pcre X11
+CLIBS_clear_screen := cutil
 
 GNATHTMLOPT := -D
 
