Add "-bargs -ws" because we compile with -gnatE (and GtkAda does not).

--- a/cots/mine/makefile
+++ b/cots/mine/makefile
@@ -3,7 +3,7 @@ include $(HOME)/Makefiles/common.mk
 ADAVIEW := $(HOME)/ada/cots/pragmarc
 EXES := mine_detector
 
-GARGS_mine_detector := `gtkada-config`
+GARGS_mine_detector := `gtkada-config` -bargs -ws
 
 include $(TEMPLATES)/ada.mk
 
