--- a/reposit/makefile
+++ b/reposit/makefile
@@ -1,14 +1,14 @@
 include $(HOME)/Makefiles/common.mk
 
-include $(TEMPLATES)/units.mk
+ADAWARN := true
 
+include $(TEMPLATES)/units.mk
 SUBUNITS := afpx-af_dscr afpx-af_list afpx-af_ptg \
   arbitrary-prime_list channels-file \
   pattern-storage x_mng-dispatch \
   xml_parser-file_mng xml_parser-parse_mng \
   xml_parser-parse_mng-dtd xml_parser-parse_mng-entity_mng \
   xml_parser-parse_mng-util xml_parser-tree_mng
-
 LIBS := $(filter-out $(SUBUNITS), $(UNITS))
 
 EXES := afpx_bld clear_screen
