Use Xml for Channels file.

--- a/usr/dictio/makefile
+++ b/usr/dictio/makefile
@@ -4,7 +4,7 @@ ADAVIEW := $(REPOSIT)
 ADAWARN := true
 EXES := dictio t_dictio
 
-CLIBS := cutil
+CLIBS := posix2pcre pcre cutil
 
 include $(TEMPLATES)/ada.mk
 
