Bug fixes, xml and real data and movement. Tested KO.

--- a/usr/enigma/makefile
+++ b/usr/enigma/makefile
@@ -5,6 +5,7 @@ ADAWARN := true
 EXES := anal_freq enigma scrambler_generator def_enigma letterator
 
 CLIBS := cutil
+CLIBS_enigma := posix2pcre pcre
 
 include $(TEMPLATES)/ada.mk
 
