More fixes. Fix def_enigma. Test with enigmacode.

--- a/usr/enigma/makefile
+++ b/usr/enigma/makefile
@@ -6,6 +6,7 @@ EXES := anal_freq enigma scrambler_generator def_enigma letterator
 
 CLIBS := cutil
 CLIBS_enigma := posix2pcre pcre
+CLIBS_def_enigma := posix2pcre pcre
 
 include $(TEMPLATES)/ada.mk
 
