Add file path normalization.

--- a/usr/misc/makefile
+++ b/usr/misc/makefile
@@ -5,7 +5,7 @@ ADAWARN := true
 AFPX := true
 
 EXES := adand add_nums alook arbipas beep comp_vars ddir \
- dtd_checker dtd_checker.stat e2f fact g hanoi impot_04 \
+ dtd_checker dtd_checker.stat e2f fact full_path g hanoi impot_04 \
  mlbx_overflow one_of_arg pascal pingpong prime random relay rndsok renamer \
  second stat statfile status strcase tcping trail_spaces udp_spy \
  wait xml_checker pingpong.stat tcping.stat udp_spy.stat xml_checker.stat
@@ -15,6 +15,7 @@ CLIBS_renamer := x_mng X11
 CLIBS_comp_vars := posix2pcre pcre
 CLIBS_dtd_checker := posix2pcre pcre
 CLIBS_relay := posix2pcre pcre
+CLIBS_full_path := posix2pcre pcre
 CLIBS_xml_checker := posix2pcre pcre
 
 LARGS_tcping.stat := $(CPATHD)/libcutil.a
