--- a/usr/makefile
+++ b/usr/makefile
@@ -1,5 +1,5 @@
 SUBDIRS := dictio fifos mcd pipe \
- account als approx astub asubst c_magic chess code day_of_week \
+ account agite als approx astub asubst c_magic chess code day_of_week \
  enigma fl \
  great_circle heart hungar lem misc mmind navig nimmari pexec \
  simusi sokoban tasks tests xwords
