--- a/reposit/makefile
+++ b/reposit/makefile
@@ -16,7 +16,7 @@ EXES := afpx_bld clear_screen
 CLIBS_afpx_bld := cutil x_mng posix2pcre pcre X11
 CLIBS_clear_screen := cutil
 
-GNATHTMLOPT := -D
+GNATHTMLOPT := -d
 
 include $(TEMPLATES)/ada.mk
 
