Activate Adawarn by default

--- a/cots/mine/makefile
+++ b/cots/mine/makefile
@@ -1,6 +1,7 @@
 include $(HOME)/Makefiles/common.mk
 
 ADAVIEW := $(HOME)/ada/cots/pragmarc
+ADAWARN := false
 EXES := mine_detector
 
 GARGS_mine_detector := `gtkada-config`
