--- a/usr/makefile
+++ b/usr/makefile
@@ -2,7 +2,7 @@ SUBDIRS := dictio fifos mcd pipe \
  account agite als approx astub asubst c_magic chess code day_of_week \
  enigma fl \
  great_circle heart hungar lem lsadeps misc mmind navig nimmari pexec \
- simusi sokoban tasks tests xwords
+ simusi sokoban tasks tcpchat tests xwords
 
 include $(HOME)/Makefiles/dir.mk
 
