--- a/usr/xwords/makefile
+++ b/usr/xwords/makefile
@@ -2,10 +2,11 @@ include $(HOME)/Makefiles/common.mk
 
 ADAVIEW := $(REPOSIT)
 AFPX := true
-EXES := xwords words_check
+EXES := xwords words_check t_file_hash
 
 CLIBS_xwords := x_mng cutil X11
 CLIBS_words_check := cutil
+CLIBS_t_file_hash := cutil
 
 include $(TEMPLATES)/ada.mk
 
