--- a/usr/xwords/makefile
+++ b/usr/xwords/makefile
@@ -2,7 +2,7 @@ include $(HOME)/Makefiles/common.mk
 
 ADAVIEW := $(REPOSIT)
 AFPX := true
-EXES := xwords words_check t_file_hash t_analist
+EXES := xwords words_check t_analist
 
 CLIBS_xwords := x_mng cutil X11
 CLIBS_words_check := cutil
