Analist correct implem

--- a/usr/xwords/makefile
+++ b/usr/xwords/makefile
@@ -5,8 +5,7 @@ AFPX := true
 EXES := xwords words_check t_analist
 
 CLIBS_xwords := x_mng cutil X11
-CLIBS_words_check := cutil
-CLIBS_t_file_hash := cutil
+CLIBS := cutil
 
 include $(TEMPLATES)/ada.mk
 
