Automatically make html

--- a/reposit/makefile
+++ b/reposit/makefile
@@ -15,6 +15,7 @@ EXES := afpx_bld clear_screen
 CLIBS_afpx_bld := cutil x_mng posix2pcre pcre X11
 CLIBS_clear_screen := cutil
 
+HTML := true
 GNATHTMLOPT := -d
 
 include $(TEMPLATES)/ada.mk
