Make and use a static executable

--- a/usr/agite/makefile
+++ b/usr/agite/makefile
@@ -2,10 +2,13 @@ include $(HOME)/Makefiles/common.mk
 
 ADAVIEW := $(REPOSIT)
 AFPX := true
-EXES := agite t_git
+EXES := agite agite.stat t_git
 
 CLIBS := x_mng cutil X11
 CLIBS_agite := posix2pcre pcre
+
+LARGS_agite.stat := $(CPATHD)/libx_mng.a $(CPATHD)/libcutil.a \
+  $(CPATHD)/libposix2pcre.a $(PCRE)/libpcre.a -lX11
 
 include $(TEMPLATES)/ada.mk
 
