First step of autobus configuration file

--- a/reposit/makefile
+++ b/reposit/makefile
@@ -2,7 +2,7 @@ include $(HOME)/Makefiles/common.mk
 
 include $(TEMPLATES)/units.mk
 SUBUNITS := afpx-af_dscr afpx-af_list afpx-af_ptg \
-  arbitrary-prime_list channels-file \
+  arbitrary-prime_list autobus-config channels-file \
   pattern-storage x_mng-dispatch \
   xml_parser-file_mng xml_parser-parse_mng \
   xml_parser-parse_mng-dtd xml_parser-parse_mng-entity_mng \
