--- a/usr/makefile
+++ b/usr/makefile
@@ -1,7 +1,7 @@
-SUBDIRS := dictio fifos mcd pipe \
+SUBDIRS := dictio fifos pipe \
  account agite als approx astub asubst c_magic chess code day_of_week \
  enigma fl \
- great_circle heart hungar lsadeps lem misc mmind navig nimmari pexec \
+ great_circle heart hungar lsadeps lem mcd misc mmind navig nimmari pexec \
  renardeau simusi sokoban tasks tcpchat tests xwords
 
 include $(HOME)/Makefiles/dir.mk
