--- a/cots/makefile
+++ b/cots/makefile
@@ -1,4 +1,5 @@
+include $(HOME)/Makefiles/common.mk
 SUBDIRS := pragmarc mine linxtris-0.1a2
 
-include $(HOME)/Makefiles/dir.mk
+include $(TEMPLATES)/dir.mk
 
