--- a/usr/asubst/makefile
+++ b/usr/asubst/makefile
@@ -9,5 +9,8 @@ CLIBS_asubst := posix2pcre pcre
 LARGS_asubst.stat := $(CPATHD)/libcutil.a $(CPATHD)/libposix2pcre.a \
   $(PCRE)/libpcre.a
 
+TEXI=Asubst History
+History_WIDTH := 120
+
 include $(TEMPLATES)/ada.mk
 
