--- a/usr/tests/makefile
+++ b/usr/tests/makefile
@@ -4,7 +4,7 @@ include $(TEMPLATES)/units.mk
 
 ADAVIEW := $(REPOSIT)
 AFPX := true
-EXES := $(filter-out t_smart_int, $(UNITS))
+EXES := $(filter-out t_smart_int t_ndbm, $(UNITS))
 
 CLIBS := x_mng cutil X11
 CLIBS_t_ndbm := cndbm gdbm \
